# ds-tdd-practice

./: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
challenges/: day_01_easy.md  day_02_easy.md  day_03_easy.md  day_04_easy.md  day_05_easy.md  day_06_easy.md  day_07_medium.md  day_08_medium.md  day_09_medium.md  day_10_medium.md
solutions/: __init__.py  day_01_solution.py  day_02_solution.py
tests/: __init__.py  test_day_01.py  test_day_02.py
utils/: __init__.py  challenge_manager.py
