[project]
name = "ds-tdd-practice"
version = "0.1.0"
description = "50-day data science TDD challenge system"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ds_tdd_practice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
